src/main/java/com/example/writemymail/error/CredentialsAlreadyExistsException.java
package com.example.writemymail.error;

public class CredentialsAlreadyExistsException extends RuntimeException {
    public CredentialsAlreadyExistsException(String message) {
        super(message);
    }
}